# Switchboard

./: .env.example  .gitignore  .graphifyignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  build.gradle  database.rules.json  gradle.properties  hooks.json  mcp_config.json  plugin.json  pyproject.toml  settings.gradle  storage.rules
.claude-plugin/: marketplace.json  plugin.json
.gemini/: settings.json
android/: README.md  build.gradle  settings.gradle
dashboard/: app.js  commands.js  commands.test.js  dashboard-config.js  derive.js  derive.test.js  doc-view.html  doc-view.js  document.js  document.test.js  escape.js  escape.test.js  firebase.js  index.html  markdown.js  markdown.test.js  preview.html  schema.js  schema.test.js  statusControl.js  store.js  store.test.js  styles.css
docs/: completed-ledger.md  decisions-rejected.md  feature-backlog.md  project_next_session.md  switchboard-design-spec-comprehensive.md  switchboard-vs-forge-comparison.md  task-tracking-design.md
hooks/: hooks.json
scripts/: _hook_common.py  agent-status-hook.py  agy-identity-hook.py  away-mode-tool-guard-hook.py  cli-session-end-hook.py  cli-session-injector-hook.py  cli-session-start-hook.py  dedot-obsidian.ps1  firebase_query.py  generate-dashboard-favicon.ps1  graphify-src-view.py  install-client.ps1  install-service.ps1  install-turn-end-hook.ps1  refresh-obsidian-vault.py  register-spawn-task.ps1  restart-service.ps1  spawn-claude-wsl.sh  spawn-launcher.ps1  turn-end-hook-away-mode.py  uninstall-service.ps1  vault_pipeline_lib.py
server/: __init__.py  __main__.py  clock.py  (+25 more)
(+399 files in other folders)
